<resources>
    <string name="app_name">Tic Tac Teo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="opponent">Opponent</string>
    <string name="you">You</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="exit_game">Exit Game</string>
    <string name="win_0">Win: 0</string>
    <string name="restart">Restart</string>
    <string name="click">Click</string>
    <string name="draw">Draw: 0</string>
    <string name="lose">Lose: 0</string>
</resources>