<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_500"
        android:paddingStart="15dp"
        android:paddingTop="20dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/visitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Opp.."
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_0"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/host"
            app:layout_constraintTop_toBottomOf="@id/host"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/win"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lose"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/visitor"
            app:layout_constraintTop_toBottomOf="@+id/visitor"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/host_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/close"
            app:layout_constraintBottom_toBottomOf="@id/host"
            app:layout_constraintStart_toEndOf="@+id/host"
            app:layout_constraintTop_toTopOf="@id/host"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/visitor_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/circumference"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/visitor"
            app:layout_constraintBottom_toBottomOf="@id/visitor"
            app:layout_constraintTop_toTopOf="@id/visitor"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E4E1E1"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="3">

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />

            <ImageView
                style="@style/game_btn"
                tools:ignore="ContentDescription" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_500"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/turn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Turn(you)"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/restart"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>